# reversi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: asstes.h  board.h  draw.h
src/: assets.c  board.c  draw.c  main.c
